<resources>
    <string name="app_name">Messy_Flatmates</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- nav bar strings -->
    <string name="nav_calendar">Calendar</string>
    <string name="nav_create_task">Create a Task</string>
    <string name="nav_my_tasks">My Tasks</string>
    <string name="nav_group">Group</string>
    <string name="nav_new_flat">New Flat</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
