<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/upload"
            android:title="Login" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/navbar_home"
            android:title="Home" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/bug"
            android:title="Calendar" />
        <item
            android:id="@+id/nav_create_task"
            android:icon="@drawable/book"
            android:title="@string/nav_create_task" />
        <item
            android:id="@+id/nav_my_tasks"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_my_tasks" />
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_group" />
        <item
            android:id="@+id/nav_flat"
            android:icon="@drawable/heart"
            android:title="Flat" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/user"
                android:title="@string/nav_profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>